licenses(["notice"])

filegroup(
    name = "srcs",
    srcs = [
        ":logs_hdrs",
        ":logs_srcs",
        ":test_srcs",
        "BUILD.bazel",
    ],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "logs_hdrs",
    srcs = glob(["*.hpp"]),
)

filegroup(
    name = "logs_srcs",
    srcs = glob(["src/*.cpp"]),
)

filegroup(
    name = "test_srcs",
    srcs = glob(["test/*.cpp"]),
)

######### LIBRARIES #########

cc_library(
    name = "logs",
    hdrs = [":logs_hdrs"],
    srcs = [":logs_srcs"],
    copts = ["-std=c++17"],
    deps = ["//fmts:fmts"],
    visibility = ["//visibility:public"],
)

######### TEST #########

cc_test(
    name = "test",
    size = "small",
    srcs = [":test_srcs"],
    deps = [
        ":logs",
        "@gtest//:gtest",
    ],
    linkstatic = True,
    copts = ["-std=c++17"],
)
