licenses(["notice"])

filegroup(
    name = "srcs",
    srcs = [
        ":types_hdrs",
        ":types_srcs",
        ":test_srcs",
        "BUILD.bazel",
    ],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "types_hdrs",
    srcs = glob(["*.hpp"]),
)

filegroup(
    name = "types_srcs",
    srcs = glob(["src/*.cpp"]),
)

filegroup(
    name = "test_srcs",
    srcs = glob(["test/*.cpp"]),
)

######### LIBRARIES #########

cc_library(
    name = "types",
    hdrs = [":types_hdrs"],
    # srcs = [":types_srcs"],
    copts = ["-std=c++17"],
    visibility = ["//visibility:public"],
)
